test/should-fail/vsgc-2058.f3
/**
 * Ensure that partially completed function definitions don't abort
 * @test/compile-error
 */
package t1;

function f(a :Number, )

